# dapp

./: .gitignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml
.github/workflows/: main.yml  release_ga.yml
dapp/: constants.py  main.py
dapp/data/: load.py  transform.py
dapp/test/: test_main.py
dapp/test/data/: test_load.py  test_transform.py
