[tool.poetry]
name = "dapp"
version = "0.01"
description = "testing poetry"
authors = ["lucho <lucho@lucho.com>"]
packages = [{include='dapp'}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "1.3.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"
black = "^21.8b0"
pylint = "^2.10.2"
flake8 = "^3.9.2"
isort = "^5.9.3"
pytest = "^6.2.5"
pytest-mock = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79